# tpai_deep_research_from_scratch

./: .gitignore  .gitmodules  README.md  notes.md  pyproject.toml  pytest.ini
deep_research_from_scratch/: multi_agent_supervisor.py
docs/: FORCE_USE_MOCK.md  chat_history.md  chat_summary.md  prompt.md
notebooks/: 0_consolidated_research_agent.ipynb  1_scoping.ipynb  2_research_agent.ipynb  README.md  nb_bootstrap.py  research_workflow_comprehensive.executed.ipynb  research_workflow_comprehensive.ipynb
scripts/: README.md  add_cell_ids.py  debug_bootstrap_subprocess.py  fix_notebook_ids.py  generate_final_report.py  import_check.py  run_and_save_nb.py  run_demo.py  run_notebook_cells.py  run_notebooks.py
tasks/: prd-comprehensive-educational-notebook.md  prd-research-agent-framework.md  tasks-prd-comprehensive-educational-notebook.md  tasks-prd-research-agent-framework.md
tests/: conftest.py  test_adapters.py  test_adapters_edgecases.py  test_adapters_network_mocked.py  test_benchmark_format.py  test_benchmark_throughput.py  test_bootstrap.py  test_bootstrap_wiring.py  test_config.py  test_config_env_vars.py  test_discovery_smoke.py  test_end_to_end_flow.py  test_final_report_output.py  test_force_use_mock_end_to_end.py  test_llm_compare.py  test_llm_factory_mapping.py  test_llm_mock.py  test_logging.py  test_logging_supervisor.py  test_mcp_file_tools.py  test_mcp_tools.py  test_mock_search.py  test_mockllm_behavior.py  test_models.py  test_models_location.py  test_nb_bootstrap.py  test_notebook_helpers.py  test_prompt_llm_troubleshooting.py  test_renderer.py  (+19 more)
(+43 files in other folders)
