[project]
name = "deep_research_from_scratch"
version = "0.1.0"
description = "Build a deep research agent from scratch"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.6.6",
  "langchain>=0.3.27",
  "langchain-openai>=0.3.32",
  "langchain-anthropic>=0.3.19",
  "langchain_community>=0.3.29",
  "langchain_tavily>=0.2.11",
  "langchain_mcp_adapters>=0.1.9",
  "pydantic>=2.11.7",
  "rich>=14.1.0",
  "jupyter>=1.1.1",
  "ipykernel>=6.30.1",
  "tavily-python>=0.7.11",
  "nest_asyncio>=1.6.0",
  "IPython>=9.5.0",
  "loguru>=0.7.3",
  "environs>=14.3.0",
  "assertpy>=1.1",
  "pydantic-settings>=2.10.1",
  "httpx>=0.24.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.17.1", "ruff>=0.12.12", "pytest>=8.4.2", "pydantic-extra-types>=0.12.0", "pint>=0.20.0", "hypothesis>=6.88.0", "respx>=0.20.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deep_research_from_scratch"]

[tool.setuptools.package-dir]
"deep_research_from_scratch" = "src/deep_research_from_scratch"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "D",    # pydocstyle
  "D401", # First line should be in imperative mood
  "T201",
  "UP",
]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
